--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     },
     "dependencies": {
         "critical": "0.8.4",
+        "imagemin-guetzli": "1.0.0",
         "gulp": "3.8.10",
         "gulp-base64": "0.1.2",
         "gulp-clean": "*",
         "gulp-concat": "*",
         "gulp-ejs": "*",
+        "gulp-imagemin": "3.2.0",
         "gulp-inline-source": "*",
         "gulp-jshint": "*",
         "gulp-jsonlint": "*",
