--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "main": "server.js",
     "scripts": {
         "build": "mkdir ./src/rendered; gulp build",
+        "images": "gulp images-min",
         "lint": "gulp lint"
     },
     "dependencies": {
