--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "gulp-jsonlint": "*",
         "gulp-less": "3.0.1",
         "gulp-clean-css": "2.3.2",
-        "gulp-minify-html": "*",
+        "gulp-htmlmin": "3.0.0",
         "gulp-rename": "*",
         "gulp-uglify": "*",
         "jshint": "*"
