--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   local_dir: dist
-  repo: eden/eden-vet.github.io
+  repo: eden-vet/eden-vet.github.io
   target_branch: master
   on:
     branch: master
