--- a/package.json
+++ b/package.json
@@ -13,31 +13,33 @@
         "build": "mkdir -p ./src/rendered; cp ./src/critical.css ./src/rendered/; gulp build",
         "build-dev": "gulp build-dev",
         "image": "gulp images-min",
-        "lint": "gulp lint"
+        "lint": "gulp lint",
+        "lint2": "ejslint ./src/templates/index.ejs"
     },
     "dependencies": {
         "critical": "0.8.4",
-        "imagemin-guetzli": "1.0.0",
+        "ejs-lint": "^0.3.0",
         "gulp": "3.9.1",
         "gulp-base64": "0.1.2",
-        "gulp-clean": "*",
-        "gulp-concat": "*",
-        "gulp-delete-lines": "0.0.7",
-        "gulp-ejs": "*",
-        "gulp-imagemin": "3.2.0",
-        "gulp-inline-source": "*",
-        "gulp-jshint": "*",
-        "gulp-jsonlint": "*",
-        "gulp-less": "3.0.1",
+        "gulp-clean": "0.4.0",
         "gulp-clean-css": "2.3.2",
+        "gulp-concat": "2.6.1",
+        "gulp-delete-lines": "0.0.7",
+        "gulp-ejs": "4.1.2",
         "gulp-htmlmin": "3.0.0",
-        "gulp-rename": "*",
-        "gulp-uglify": "*",
-        "jshint": "*"
+        "gulp-imagemin": "3.2.0",
+        "gulp-inline-source": "4.0.0",
+        "gulp-jshint": "2.1.0",
+        "gulp-jsonlint": "1.3.1",
+        "gulp-less": "3.0.1",
+        "gulp-rename": "2.0.0",
+        "gulp-uglify": "3.0.2",
+        "imagemin-guetzli": "1.0.0",
+        "jshint": "2.11.0-rc1"
     },
     "repository": {
-    "type": "git",
-    "url": "git://github.com:azaitw/eden-vet.git"
+        "type": "git",
+        "url": "git://github.com:azaitw/eden-vet.git"
     },
     "licenses": [
         {
