--- a/package.json
+++ b/package.json
@@ -10,32 +10,34 @@
     "keywords": [],
     "main": "server.js",
     "scripts": {
-        "build": "mkdir -p ./src/rendered; cp ./src/critical.css ./src/rendered/; gulp build",
-        "build-dev": "gulp build-dev",
+        "build": "NODE_ENV=production gulp build",
+        "dev": "rm -rf ./dist && rm -rf ./src/tmp && gulp build && http-server dist -p 8080",
         "image": "gulp images-min",
         "lint": "gulp lint",
         "lint2": "ejslint ./src/templates/index.ejs"
     },
     "dependencies": {
-        "critical": "0.8.4",
-        "ejs-lint": "^0.3.0",
-        "gulp": "3.9.1",
-        "gulp-base64": "0.1.2",
+        "ejs-lint": "1.2.1",
+        "gulp": "4.0.2",
+        "gulp-base64": "0.1.3",
         "gulp-clean": "0.4.0",
-        "gulp-clean-css": "2.3.2",
+        "gulp-clean-css": "4.3.0",
         "gulp-concat": "2.6.1",
-        "gulp-delete-lines": "0.0.7",
         "gulp-ejs": "4.1.2",
-        "gulp-htmlmin": "3.0.0",
-        "gulp-imagemin": "3.2.0",
+        "gulp-htmlmin": "5.0.1",
+        "gulp-imagemin": "7.1.0",
         "gulp-inline-source": "4.0.0",
         "gulp-jshint": "2.1.0",
-        "gulp-jsonlint": "1.3.1",
-        "gulp-less": "3.0.1",
+        "gulp-jsonlint": "1.3.2",
+        "gulp-less": "5.0.0",
+        "gulp-markdown": "6.0.0",
         "gulp-rename": "2.0.0",
+        "gulp-replace": "1.1.3",
         "gulp-uglify": "3.0.2",
-        "imagemin-guetzli": "1.0.0",
-        "jshint": "2.11.0-rc1"
+        "html-to-text": "8.1.0",
+        "http-server": "14.1.0",
+        "imagemin-guetzli": "3.0.0",
+        "jshint": "2.13.3"
     },
     "repository": {
         "type": "git",
